# Mortarly

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  check_sse2.cpp  install-ogl-qt.sh
include/components/: Button.h  HBox.h  Text.h  VBox.h
include/core/: Component.h  Result.h  Signal.h
src/: main.cpp  pch.h
src/components/: HBox.cpp  Text.cpp  VBox.cpp
src/core/: Component.cpp  Signal.cpp  error.h  logging.cpp  logging.h  stb_impl.cpp  testing.cpp  testing.h
src/gui/: GUI.cpp  GUI.h  GUIContext.cpp  GUIContext.h  TreeNode.cpp  TreeNode.h
tests/components/: Button.cpp  HBox.cpp  Text.cpp  VBox.cpp
tests/core/: Component.cpp  Result.cpp  Signal.cpp
